k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vpn-bot
  labels:
    name: vpn-bot
